--- a/dashboard/ejs/blocks/footer.ejs
+++ b/dashboard/ejs/blocks/footer.ejs
@@ -1,5 +1,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<div><ul><li><input type="text" name="envname['+ x +']"/></li><li><input type="text" name="envvalue['+ x +']"/></li></ul><a href="#" class="remove_field">Remove</a></div>
+<div>
+<ul>
+    <li><input type="text" name="envname['+ x +']"/></li>
+    <li><input type="text" name="envvalue['+ x +']"/></li>
+    <li><a href="#" class="remove_field">Remove</a></li>
+  </ul>
+</div>
+<div><ul><li><input type="text" name="envname['+ x +']"/></li><li><input type="text" name="envvalue['+ x +']"/></li><li><a href="#" class="remove_field">Remove</a></li></ul></div>
 <script type="text/javascript">
   $(document).ready(function() {
     var wrapper         = $(".input_fields_wrap"); //Fields wrapper
@@ -11,7 +18,7 @@
         e.preventDefault();
 
             x++;
-            $(wrapper).append('<div><ul><li><input type="text" name="envname['+ x +']"/></li><li><input type="text" name="envvalue['+ x +']"/></li></ul><a href="#" class="remove_field">Remove</a></div>');
+            $(wrapper).append('<div><ul><li><input type="text" name="envname['+ x +']"/></li><li><input type="text" name="envvalue['+ x +']"/></li><li><a href="#" class="remove_field">Remove</a></li></ul></div>');
 
     });
 
