--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -16,7 +16,13 @@
     <p style="font-size: 18px;">Variables</p>
     <div class="input_fields_wrap">
       <button class="add_field_button">Add More Fields</button>
-      <div><ul><li><input type="text" name="envname['+ x +']"/></li><li><input type="text" name="envvalue['+ x +']"/></li><li><a href="#" class="remove_field">Remove</a></li></ul></div>
+      <div>
+        <ul>
+          <li><input type="text" name="envname['+ x +']"/></li>
+          <li><input type="text" name="envvalue['+ x +']"/></li>
+          <li><a href="#" class="remove_field">Remove</a></li>
+        </ul>
+      </div>
     </div>
 
     <ul>
