--- a/dashboard/ejs/blocks/footer.ejs
+++ b/dashboard/ejs/blocks/footer.ejs
@@ -23,7 +23,7 @@
     });
 
     $(wrapper).on("click",".remove_field", function(e){
-        e.preventDefault(); $(this).parent('div').remove(); x--;
+        e.preventDefault(); var classes = $(this).parent().closest('div').attr('class').split(' '); x--;
     })
 
 });
