--- a/dashboard/ejs/blocks/footer.ejs
+++ b/dashboard/ejs/blocks/footer.ejs
@@ -1,12 +1,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<div>
-<ul>
-    <li><input type="text" name="envname['+ x +']"/></li>
-    <li><input type="text" name="envvalue['+ x +']"/></li>
-    <li><a href="#" class="remove_field">Remove</a></li>
-  </ul>
-</div>
-<div><ul><li><input type="text" name="envname['+ x +']"/></li><li><input type="text" name="envvalue['+ x +']"/></li><li><a href="#" class="remove_field">Remove</a></li></ul></div>
 <script type="text/javascript">
   $(document).ready(function() {
     var wrapper         = $(".input_fields_wrap"); //Fields wrapper
@@ -18,12 +10,18 @@
         e.preventDefault();
 
             x++;
-            $(wrapper).append('<div><ul><li><input type="text" name="envname['+ x +']"/></li><li><input type="text" name="envvalue['+ x +']"/></li><li><a href="#" class="remove_field">Remove</a></li></ul></div>');
+            $(wrapper).append('<div>
+              <ul>
+                <li><input type="text" name="envname['+ x +']"/></li>
+                <li><input type="text" name="envvalue['+ x +']"/></li>
+                <li><a href="#" class="remove_field">Remove</a></li>
+              </ul>
+            </div>');
 
     });
 
     $(wrapper).on("click",".remove_field", function(e){
-        e.preventDefault(); var classes = $(this).parent().closest('div').attr('class').split(' '); x--;
+        e.preventDefault(); var classes = $(this).parent().closest('div').attr('class').split(' ').remove(); x--;
     })
 
 });
