--- a/dashboard/ejs/blocks/footer.ejs
+++ b/dashboard/ejs/blocks/footer.ejs
@@ -9,14 +9,12 @@
     var x = $('div.env').length || 0
     $(add_button).click(function(e){ //on add input button click
         e.preventDefault();
-
             x++;
             $(wrapper).append('<div><ul> <li><input type="text" name="envname['+ x +']"/></li> <li><input type="text" name="envvalue['+ x +']"/></li> <li><a href="#" class="remove_field">Remove</a></li></ul></div>');
-
     });
 
     $(wrapper).on("click",".remove_field", function(e){
-        e.preventDefault(); var classes = $(this).parent().attr('div').remove(); x--;
+        e.preventDefault(); $(this).parent().closest('div').attr('class').split(' ').remove(); x--;
     })
 
 });
