--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" href="/public/Axel.png">
     <link rel="stylesheet" type="text/css" href="/public/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/0c53fdb43b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav>
