--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -20,18 +20,10 @@
         <ul>
           <li><input type="text" name="envname['+ x +']"/></li>
           <li><input type="text" name="envvalue['+ x +']"/></li>
-          <li><a href="#" class="remove_field">Remove</a></li>
+          <li><a href="#" class="remove_field"><i></i></a></li>
         </ul>
       </div>
     </div>
-
-    <ul>
-      <li><input type="text" name="envname" value="" placeholder="Name"></li>
-      <li><input type="text" name="envvalue" value="" placeholder="Value"></li>
-    </ul>
-    <ul>
-
-    </ul>
   </form>
   <p style="font-size: 20px;">Advanced Settings</p>
   <hr>
