--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -31,6 +31,7 @@
       <% } %>
 
     </div>
+    <button type="submit">Save Settings</button>
   </form>
   <p style="font-size: 20px;">Advanced Settings</p>
   <hr>
