--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -17,13 +17,13 @@
     <div class="input_fields_wrap">
       <button class="add_field_button">Add More Fields</button>
       <%
-        if(mongoapp.environment.length !== 0 ){
-          for (var i = 0; i < mongoapp.environment.length; i++){
+        if(mongoapp.environment.envname !== 0 ){
+          for (var i = 0; i < mongoapp.environment.envname.length; i++){
       %>
       <div>
         <ul>
-          <li><input type="text" name="envname[<%= i %>]"/></li>
-          <li><input type="text" name="envvalue[<%= i %>]"/></li>
+          <li><input type="text" placeholder="Name" name="envname[<%= i %>]" value="<%= mongoapp.environment.envname[i] %>"/></li>
+          <li><input type="text" placeholder="Value" name="envvalue[<%= i %>]" value="<%= mongoapp.environment.envname[i] %>"/></li>
           <li><a href="#" class="remove_field"><i></i></a></li>
         </ul>
       </div>
