--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -16,27 +16,14 @@
     <p style="font-size: 18px;">Variables</p>
     <div class="input_fields_wrap">
       <button class="add_field_button">Add More Fields</button>
-      <%
-        if(mongoapp.environment.envname.length > 0 ){
-          for (var i = 0; i < mongoapp.environment.envname.length; i++){
-      %>
       <div>
         <ul>
           <li><input type="text" name="envname['+ x +']"/></li>
           <li><input type="text" name="envvalue['+ x +']"/></li>
-          <li><a href="#" class="remove_field">Remove</a></li>
+          <li><a href="#" class="remove_field"><i></i></a></li>
         </ul>
       </div>
-      <% } %>
-      <% } %>
     </div>
-    <ul>
-      <li><input type="text" name="envname" value="" placeholder="Name"></li>
-      <li><input type="text" name="envvalue" value="" placeholder="Value"></li>
-    </ul>
-    <ul>
-
-    </ul>
   </form>
   <p style="font-size: 20px;">Advanced Settings</p>
   <hr>
