--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -24,7 +24,7 @@
         <ul>
           <li><input type="text" placeholder="Name" name="envname[<%= i %>]" value="<%= mongoapp.environment.envname[i] %>"/></li>
           <li><input type="text" placeholder="Value" name="envvalue[<%= i %>]" value="<%= mongoapp.environment.envvalue[i] %>"/></li>
-          <li><a href="#" class="remove_field"><i></i></a></li>
+          <li><a href="#" class="remove_field"><i class="fas fa-times"></i></a></li>
         </ul>
       </div>
       <% } %>
