--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -7,9 +7,9 @@
   <form action="/applications/<%= dockerapp.Spec.Name %>" method="post">
     <p style="font-size: 18px;">Git</p>
     <ul>
-      <li><input type="text" name="giturl" value="<% if(mongoapp.deployment.giturl == 'ns'){ } else { return mongoapp.deployment.giturl } %>" placeholder="Git Url"></li>
-      <li><input type="text" name="gitusername" value="<% if(mongoapp.deployment.giturl == 'ns'){ } else { return mongoapp.deployment.giturl } %>" placeholder="Git Username"></li>
-      <li><input type="text" name="gitpassword" value="<% if(mongoapp.deployment.giturl == 'ns'){ } else { return mongoapp.deployment.giturl } %>" placeholder="Git Password"></li>
+      <li><input type="text" name="giturl" value="<% if(mongoapp.deployment.giturl == 'ns'){ } else { mongoapp.deployment.giturl } %>" placeholder="Git Url"></li>
+      <li><input type="text" name="gitusername" value="<% if(mongoapp.deployment.giturl == 'ns'){ } else { mongoapp.deployment.giturl } %>" placeholder="Git Username"></li>
+      <li><input type="text" name="gitpassword" value="<% if(mongoapp.deployment.giturl == 'ns'){ } else { mongoapp.deployment.giturl } %>" placeholder="Git Password"></li>
     </ul>
     <p style="font-size: 20px;">Environment Variables</p>
     <hr>
