--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -7,7 +7,7 @@
   <form action="/applications/<%= dockerapp.Spec.Name %>" method="post">
     <p style="font-size: 18px;">Git</p>
     <ul>
-      <li><input type="text" name="giturl" value="<% if(mongoapp.deployment.giturl !== "") { mongoapp.deployment.giturl } %>" placeholder="Git Url"></li>
+      <li><input type="text" name="giturl" value="<% if(mongoapp.deployment.giturl !== "") {  %> <%= mongoapp.deployment.giturl %> <% } %>" placeholder="Git Url"></li>
       <li><input type="text" name="gitusername" value="<% if(mongoapp.deployment.gitusername !== "") { mongoapp.deployment.gitusername } %>" placeholder="Git Username"></li>
       <li><input type="text" name="gitpassword" value="<% if(mongoapp.deployment.gitpassword !== "") { mongoapp.deployment.gitpassword } %>" placeholder="Git Password"></li>
     </ul>
