--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -36,7 +36,7 @@
     <div class="volwrapper">
       <button class="volbutton">Add More Fields</button>
       <%
-        if(mongoapp.volsource.length > 0 ){
+        if(mongoapp.volume.volsource.length > 0 ){
           for (var i = 0; i < mongoapp.volsource.length; i++){
       %>
       <div>
