--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -37,7 +37,7 @@
       <button class="volbutton">Add More Fields</button>
       <%
         if(mongoapp.volume.volsource.length > 0 ){
-          for (var i = 0; i < mongoapp.volsource.length; i++){
+          for (var i = 0; i < mongoapp.volume.volsource.length; i++){
       %>
       <div>
         <ul>
