--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -15,7 +15,7 @@
     <hr>
     <p style="font-size: 18px;">Variables</p>
     <div class="envwrapper">
-      <button class="volbutton">Add More Fields</button>
+      <button class="envbutton">Add More Fields</button>
       <%
         if(mongoapp.environment.envname.length > 0 ){
           for (var i = 0; i < mongoapp.environment.envname.length; i++){
