--- a/dashboard/ejs/blocks/footer.ejs
+++ b/dashboard/ejs/blocks/footer.ejs
@@ -25,7 +25,7 @@
     $(add_button).click(function(e) { //on add input button click
       e.preventDefault();
       x++;
-      $(wrapper).append('<div><ul> <li><input type="text" placeholder="Name" name="envname[' + x + ']"/></li> <li><input type="text" placeholder="Value" name="envvalue[' + x +
+      $(wrapper).append('<div><ul> <li><input type="text" placeholder="Source" name="volsource[' + x + ']"/></li> <li><input type="text" placeholder="Target" name="voltarget[' + x +
         ']"/></li> <li><a href="#" class="remove_field">Remove</a></li></ul></div>');
     });
     $(wrapper).on("click", ".remove_field", function(e) {
