--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Axel - Dashboard</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="icon" href="/public/Axel.png">
+    <link rel="icon" href="./public/Axel.png">
     <meta name="apple-mobile-web-app-title" content="Axel">
-    <link rel="apple-touch-icon" href="/public/Axel.png">
+    <link rel="apple-touch-icon" href="./public/Axel.png">
     <link rel="stylesheet" type="text/css" href="/public/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0c53fdb43b.js" crossorigin="anonymous"></script>
