--- a/dashboard/ejs/blocks/footer.ejs
+++ b/dashboard/ejs/blocks/footer.ejs
@@ -3,9 +3,11 @@
 <script type="text/javascript">
   var a = document.getElementsByTagName("a");
   for (var i = 0; i < a.length; i++) {
-    a[i].onclick = function() {
-      window.location = this.getAttribute("href");
-      return false
+    if (!a[i].onclick && a[i].getAttribute("target") != "_blank") {
+      a[i].onclick = function() {
+        window.location = this.getAttribute("href");
+        return false;
+      }
     }
   }
   $(document).ready(function() {
