--- a/dashboard/ejs/blocks/footer.ejs
+++ b/dashboard/ejs/blocks/footer.ejs
@@ -1,15 +1,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 <script type="text/javascript">
-  var a = document.getElementsByTagName("a");
-  for (var i = 0; i < a.length; i++) {
-    if (!a[i].onclick && a[i].getAttribute("target") != "_blank") {
-      a[i].onclick = function() {
-        window.location = this.getAttribute("href");
-        return false;
-      }
-    }
-  }
+  $('a').on('click touchend', function(ev){
+
+    $(this).preventDefault();
+    window.location = $(this).attr('href');
+
+})
   $(document).ready(function() {
     var wrapper = $(".envwrapper"); //Fields wrapper
     var add_button = $(".envbutton"); //Add button ID
