--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -4,7 +4,7 @@
   <br>
   <p style="font-size: 20px;">Logs</p>
   <hr>
-  <textarea name="name" readonly="" style="position: relative;top: 10px;width: calc(100% - 65px);height: calc(100vh - 20px);resize: none;margin-left: 20px;"></textarea>
+  <textarea name="name" readonly="" style="position: relative;top: 10px;width: calc(100% - 65px);height: calc(300px - 20px);resize: none;margin-left: 20px;"></textarea>
 </div>
 <br>
 <div class="jumbobox">
